# AIDecepticon

./: .dockerignore  .env.example  .gitattributes  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml
deceptionflow/: __init__.py  __main__.py  config.py
deceptionflow/api/: __init__.py  app.py
deceptionflow/cli/: main.py
deceptionflow/collectors/: __init__.py  http.py
deceptionflow/correlation/: __init__.py  engine.py
deceptionflow/deployers/: __init__.py  filesystem.py
deceptionflow/reporting/: __init__.py  markdown.py
deceptionflow/schemas/: __init__.py  event.py  exercise.py  lure.py
deceptionflow/storage/: __init__.py  sqlite.py
detection_rules/: elastic.eql  microsoft-sentinel.kql  splunk.spl
exercise_profiles/: df-ai-001-filesystem-recon.yaml
lure_templates/: df-cred-001.yaml
scripts/: dev.ps1
tests/: test_api.py  test_cli.py  test_config.py  test_correlation.py  test_event_store.py  test_filesystem_deployer.py  test_lure_schema.py
