[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "deceptionflow"
version = "0.1.0"
description = "AI-aware deception orchestration and purple-team validation framework"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
authors = [{ name = "DeceptionFlow Contributors" }]
keywords = ["purple-team", "deception", "honeytoken", "canary", "tripwire", "ai-security"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Framework :: FastAPI",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.12",
  "Topic :: Security",
]
dependencies = [
  "fastapi>=0.115,<1.0",
  "pydantic>=2.9,<3.0",
  "pydantic-settings>=2.5,<3.0",
  "PyYAML>=6.0,<7.0",
  "rich>=13.9,<15.0",
  "typer>=0.12,<1.0",
  "uvicorn[standard]>=0.30,<1.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27,<1.0",
  "pytest>=8.3,<9.0",
  "pytest-cov>=5.0,<7.0",
  "ruff>=0.7,<1.0",
]

[project.scripts]
deceptionflow = "deceptionflow.cli.main:app"

[project.urls]
Homepage = "https://github.com/your-org/deceptionflow"
Issues = "https://github.com/your-org/deceptionflow/issues"

[tool.hatch.build.targets.wheel]
packages = ["deceptionflow"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
